--- a/src/AutoCursor.WindowsForms/AutoCursor.WindowsForms.csproj
+++ b/src/AutoCursor.WindowsForms/AutoCursor.WindowsForms.csproj
@@ -14,10 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\AutoCursor.Library\AutoCursor.Library.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -34,6 +30,10 @@
 
   <ItemGroup>
     <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AutoCursor.Library\AutoCursor.Library.csproj" />
   </ItemGroup>
 
 </Project>
